--- a/src/pages/bookStep3/index.less
+++ b/src/pages/bookStep3/index.less
@@ -3,7 +3,7 @@
 .breadcrumb li{width:25%;}
 .formWrap{background-color: #fff;padding:32px 24px;margin-bottom: 30px;}
 
-.formWrap .btn-positive{margin-right: 30px;}
+.formWrap .btnRow .btn{margin-right: 30px;}
 
 .label_check{
     font-size: 13px;color: #333;overflow:visible;line-height: 32px;cursor: pointer;margin-right: 30px;background-color: #f3f3f3;border:1px solid #ccc;user-select: none;margin-bottom: 12px;min-width: 128px;width:auto;
