--- a/src/pages/evaluateStep3/index.less
+++ b/src/pages/evaluateStep3/index.less
@@ -8,7 +8,7 @@
  	display: inline-block;vertical-align: middle;background-repeat: no-repeat;
 }
 
-.icon-location{.icon;width:20px;height:21px;background-image:url("./img/location.png");background-position: 0 0;}
+.icon-location{.icon;width:20px;height:21px;background-image:url("../../assets/img/location.png");background-position: 0 0;}
 .icon-book{background-position: -20px 0;}
 .icon-list{background-position: -40px 0;}
 .icon-fenshu{background-position: -60px 0;}
