--- a/src/pages/bookResult/index.less
+++ b/src/pages/bookResult/index.less
@@ -66,3 +66,7 @@
 .row label + .col2{margin-left: 120px;}
 
 .bookCnt .label_radio{width: 140px;}
+
+pre{display: none;}
+
+#bookForm .label_check{min-width: 100px;padding-left:10px;padding-right: 10px;width: auto;margin-bottom: 10px;margin-right: 7px;}
