评估第三部

--- a/src/pages/evaluateStep3/index.less
+++ b/src/pages/evaluateStep3/index.less
@@ -22,7 +22,7 @@
 	.control-label em{margin-left: 10px;}
 }
 
-.formWrap .btn-positive{margin-right: 30px;}
+.formWrap .btnRow .btn{margin-right: 30px;}
 
 .cInfo{margin-bottom: 24px;}
 .onlyTxt{display:inline-block;line-height: 34px;height: 34px;color: #8d8d8d;font-size: 16px;}
