--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -169,7 +169,7 @@ html,body{background-color: @color-body;}
 .pagination a,.pagination span {display: inline-block;width: 22px;border: 1px solid @color-blue;font-size: 14px;margin-right: 10px;background-color: #fff;text-align: center;}
 
 /* 我的信息弹窗 */
-.myInfo{
+.myInfoModal{
 	.row{margin-bottom: 10px;}
 	.input{background-color: #fff;}
 	.control-label{color: #333;}
