--- a/src/assets/templates/applyInfo.ejs
+++ b/src/assets/templates/applyInfo.ejs
@@ -1,4 +1,4 @@
-<div class="modalCntWrap taoModal g9 modalForm myInfo">
+<div class="modalCntWrap taoModal g9 modalForm myInfoModal">
  <h3 class="clearfix"><a href="javascript:;" class="icons btn-close fr"></a><span class="fl">我的信息</span></h3>
  <form class="modalSubCnt" id="bookForm" onsubmit="return false;" autocomplete="off">
 
