--- a/src/pages/collegeFaqDetail/index.less
+++ b/src/pages/collegeFaqDetail/index.less
@@ -30,3 +30,7 @@
 .modalSubCnt .btnRow{margin-bottom: 10px;}
 
 .modalSubCnt .row label + .col2{margin-left: 80px;}
+
+.qschoolList h3{font-size: 18px;line-height: 32px;font-weight: normal;margin-bottom: 24px;
+	.btn{padding-top: 5px;padding-bottom: 5px;}
+}
