--- a/src/pages/collegeFaqHistory/index.less
+++ b/src/pages/collegeFaqHistory/index.less
@@ -1,7 +1,6 @@
 @color-blue: #61c0e2;
 @color-orange: #f4b64f;
 
-.blue{color: @color-blue;}
 .orange{color: @color-orange;}
 .icon() {
  	display: inline-block;vertical-align: middle;background-repeat: no-repeat;
@@ -13,20 +12,18 @@
 
 .formWrap{background-color: #fff;padding:32px 24px 36px;margin-bottom: 30px;}
 
-.q-school{
-	h3{font-size: 18px;line-height: 34px;margin-bottom: 18px;}
-	.btn{padding-top:5px;padding-bottom: 5px;}
+.list-group-item{
+	color:#555;font-size: 15px;line-height: 23px;
+	.body{display: block;margin-left: 232px;}
 }
 
-.s-faq{
-	font-size: 15px;color: #333;padding:0 12px;border:1px solid #e2e2e2;margin-bottom: 20px;
-	.q,.a{padding:16px 0px;}
-	.q{border-bottom: 1px solid #e2e2e2;}
-	.badges{margin-top: 16px;}
-	.badge{display:inline-block;min-width:72px;font-size: 14px;color: #fff;text-align: center;line-height: 24px;border-radius: 12px;background-color: @color-blue;margin-right: 10px;}
+.icon-right{width:13px;height: 23px;background-position: -43px 0;}
+.active .icon-right{width:13px;height: 23px;background-position: -30px 0;}
+
+.faqList{
+	margin: 32px 0;
 }
 
-.modalSubCnt .row{margin-bottom: 24px;}
-.modalSubCnt .btnRow{margin-bottom: 10px;}
-
-.modalSubCnt .row label + .col2{margin-left: 80px;}
+.history{
+	.list-group-item .fr{margin-top: 12px;}
+}
