--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -194,6 +194,7 @@ html,body{background-color: @color-body;}
 }
 .zhifubao{background-position: -27px 0;}
 
+/* listview */
 .list-group-item {
     position: relative;display: block;padding: 10px 15px;margin-bottom: -1px;
     background-color: #fff; border: 1px solid #ddd;
@@ -204,6 +205,14 @@ html,body{background-color: @color-body;}
     	margin-bottom: 0;border-bottom-right-radius: 4px;border-bottom-left-radius: 4px
 	}
 	&.active,&:hover{background-color: #f6f6f6;}
+}
+
+/* 搜索栏 */
+.formWrap .s-search{
+	 margin-bottom:20px;
+	  > div{padding-top:0;}
+	.form-control{width:100%;background-color: #f9f9f9;}
+	.input-group-btn{position: absolute;right:0;top:0;}
 }
 
 
