--- a/src/assets/components/beautifySelect/index.less
+++ b/src/assets/components/beautifySelect/index.less
@@ -42,6 +42,7 @@
     transition: max-height .3s ease-out,opacity .3s ease-out,top .3s ease-out,visibility .3s ease-out
 }
 
+
 .beautify-select .options.open {
     top: 40px;
     opacity: 1;
@@ -70,6 +71,7 @@
     transition: all 150ms ease-out
 }
 
-.beautify-select .options li.hover {
-    color: #999
+.beautify-select .options li.current {
+    color: #fff;
+    background-color: #61c0e2;
 }
