--- a/src/assets/less/mod/header.less
+++ b/src/assets/less/mod/header.less
@@ -52,7 +52,7 @@
 	.options{position: absolute;}
 }
 
-.navLists .options{
+.navLists .options,#selectSwitch .options{
 	display: none;	
 }
 .navLists .fancy-select .options{
