update分数线数据库

--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -3,7 +3,7 @@
 }
 
 .lookIcon(){
-	vertical-align: middle;display: inline-block;vertical-align: middle;
+	vertical-align: middle;display: inline-block;
 }
 
 html,body{background-color: @color-body;}
