--- a/src/pages/evaluateStep3/index.less
+++ b/src/pages/evaluateStep3/index.less
@@ -29,4 +29,6 @@
 .collegeList{margin-top: 16px;}
 .collegeList span{display: inline-block;}
 .collegeList .n{color: #999;font-size: 16px;margin-right: 24px;}
-.collegeList .c{font-size: 14px;margin-right: 18px;line-height: 34px;background-color: #f3f3f3;border:1px solid #ccc;width:110px;text-align: center;}
+.collegeList .c{font-size: 14px;margin-right: 18px;line-height: 34px;background-color: #f3f3f3;border:1px solid #ccc;min-width:110px;padding-left:10px;padding-right:10px;width:auto;text-align: center;}
+
+pre{display: none;}
