--- a/src/pages/expertOrder/templates/apply.ejs
+++ b/src/pages/expertOrder/templates/apply.ejs
@@ -19,7 +19,7 @@
     <em class="vm">联系电话：</em></label>
   <div class="col2 inputWrap rel">
     <div class="fieldWrap">
-      <input type="tel" class="input form-control" id="mobile" name="mobile" required placeholder="请输入联系电话">
+      <input type="tel" class="input form-control" id="mobile" name="mobile" required placeholder="请输入联系电话" maxlength="11">
     </div>
   </div>
 </div>
@@ -97,7 +97,7 @@
     <em class="vm">预约时间：</em></label>
   <div class="col2 inputWrap rel">
     <div class="fieldWrap">
-      <input type="tel" class="input form-control" id="booktime" name="booktime" required placeholder="预约时间">
+      <input type="text" class="input form-control" id="booktime" name="booktime" required placeholder="预约时间">
     </div>
   </div>
 </div>
