--- a/src/pages/expertOrder/templates/apply.ejs
+++ b/src/pages/expertOrder/templates/apply.ejs
@@ -46,13 +46,13 @@
     <div class="fieldWrap">
       <label for="courseType_1"  class="label_radio inline">
       <em class="icon-radio"></em>
-      <input type="radio" class="input form-control" id="courseType_1" name="courseType" checked required>
+      <input type="radio" class="input form-control" id="courseType_1" name="courseType" checked value="1" required>
       <em class="vm">理科</em>
       </label>
 
       <label for="courseType_0" class="label_radio inline">
       <em class="icon-radio"></em>
-      <input type="radio" class="input form-control" id="courseType_0" name="courseType" required>
+      <input type="radio" class="input form-control" id="courseType_0" name="courseType" value="0" required>
       <em class="vm">文科</em>
       </label>
     </div>
@@ -78,13 +78,13 @@
     <div class="fieldWrap bookCnt">
       <label for="bookType_1"  class="label_radio inline">
       <em class="icon-radio"></em>
-      <input type="radio" class="input form-control" id="bookType_1" name="bookType" checked required>
+      <input type="radio" class="input form-control" id="bookType_1" name="bookType" checked value="1" required>
       <em class="vm">专家线上服务</em>
       </label>
 
       <label for="bookType_0" class="label_radio inline">
       <em class="icon-radio"></em>
-      <input type="radio" class="input form-control" id="bookType_0" name="bookType" required>
+      <input type="radio" value="0" class="input form-control" id="bookType_0" name="bookType" required>
       <em class="vm">专家面对面服务</em>
       </label>
     </div>
