--- a/src/pages/college/templates/school.ejs
+++ b/src/pages/college/templates/school.ejs
@@ -23,7 +23,7 @@
 	</div>
 	</div>
 	<div class="fr">
-		<a href="#" class="btn btn-primary btn-mid">查看详情</a>
+		<a href="/library/college/<%= colleges[i].collegeId %>" target="_blank" class="btn btn-primary btn-mid">查看详情</a>
 	</div>
 </li>
 <% }} %>
