--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -9,6 +9,8 @@
 .userInfoList{margin-top: 20px;font-size: 16px;overflow: hidden;
 	a{color: #fff;display: block;}
 }
+
+.btn-positive{}
 .blue{color: @color-blue;}
 .userInfoList li{text-align:center;line-height:40px;border-bottom: 1px solid #fff; background-color: #606060;
 	&:hover,&.current{background-color: @color-blue;}
@@ -38,7 +40,7 @@
 
 .well .media-body .field{display: inline-block;margin-right: 30px;}
 .detailInfo {
-	.btn{padding-top:5px;padding-bottom: 5px;} 
+	.btn{padding-top:5px;padding-bottom: 5px;margin-top: 7px;} 
 	.detailTxt{color: @color-blue;margin-top: 4px;display: block;text-align: center;}
 }
 
