--- a/src/pages/user/templates/history.ejs
+++ b/src/pages/user/templates/history.ejs
@@ -1,27 +1,63 @@
-<% for (var i = 0; i < historyList.length; i++) { %>
-<div class="well clearfix" type ="<%= historyList[i].type %>">
-	<div class="media fl">
-		<div class="span fl">
-			<span class="btn btn-primary"><%= historyList[i].caseName %></span>
+<% if (wishes.length == 0 && assessment.length == 0) { %>
+	<li class="no_transList"><i class="noListIcon"></i><em class="vm">暂无记录</em></li>
+<% }else{ %>
+<% for (var i = 0; i < wishes.length; i++) { %>
+	<div class="well clearfix" type ="1">
+		<div class="media fl">
+			<div class="span fl">
+				<span class="btn btn-primary">高考方案定制</span>
+			</div>
+			<div class="media-body g3 well_body">
+				<p>
+				<span class="label">订单号：</span><span class="field"><%= wishes[i].orderId %></span>
+				<span class="label">生成日期：</span><span class="field"><%= wishes[i].createTime %></span>
+				</p>
+				<p>
+				<span class="label">高考分数：</span><span class="field"><%= wishes[i].score %></span>
+				<span class="label">全省排名：</span><span class="field"><%= wishes[i].place %></span>
+				</p>
+			</div>
 		</div>
-		<div class="media-body g3 well_body">
-			<p>
-			<span class="label">订单号：</span><span class="field"><%= historyList[i].order %></span>
-			<span class="label">生成日期：</span><span class="field"><%= historyList[i].createTime %></span>
-			</p>
-			<p>
-			<span class="label">高考分数：</span><span class="field"><%= historyList[i].score %></span>
-			<span class="label">全省排名：</span><span class="field"><%= historyList[i].place %></span>
-			</p>
+		<div class="detailInfo fr">
+			<div class="row btnRow">
+			<% if (wishes[i].payed) { %>
+			<a href="/box/plan/result?planId=<%= wishes[i].planId %>" class="btn btn-positive btn-medium">查看</a>
+			<% }else{ %>
+			<a href="/pay/wishes?planId=<%= wishes[i].planId %>" class="btn btn-primary btn-medium">付款</a>
+			<% } %>
+			</div>
 		</div>
 	</div>
-	<div class="detailInfo fr">
-		<div class="row btnRow"><a href="#" class="btn btn-primary btn-medium" targe="_blank">付款</a></div>
-		<% if( historyList[i].detailUrl != '' ) { %>				
-				<a class="detailTxt" href="<%= historyList[i].detailUrl %>" target="_blank">查看详细信息</a>
-		<% }else{ %>
-				<a href="javascript:;" >&nbsp;</a>
-		<% } %>
+<% } %>
+
+<% for (var i = 0; i < assessment.length; i++) { %>
+	<div class="well clearfix" type ="2">
+		<div class="media fl">
+			<div class="span fl">
+				<span class="btn btn-primary">高考志愿评估</span>
+			</div>
+			<div class="media-body g3 well_body">
+				<p>
+				<span class="label">订单号：</span><span class="field"><%= assessment[i].orderId %></span>
+				<span class="label">生成日期：</span><span class="field"><%= assessment[i].createTime %></span>
+				</p>
+				<p>
+				<span class="label">高考分数：</span><span class="field"><%= assessment[i].score %></span>
+				<span class="label">全省排名：</span><span class="field"><%= assessment[i].place %></span>
+				</p>
+			</div>
+		</div>
+		<div class="detailInfo fr">
+			<div class="row btnRow">
+
+			<% if (assessment[i].payed) { %>
+			<a href="/box/plan/result?planId=<%= assessment[i].planId %>" class="btn btn-positive btn-medium">查看</a>
+			<% }else{ %>
+			<a href="/pay/assessment?planId=<%= assessment[i].planId %>" class="btn btn-primary btn-medium">付款</a>
+			<% } %>
+			</div>
+		</div>
 	</div>
-</div>
+<% } %>
+
 <% } %>
