--- a/src/pages/user/templates/favCollege.ejs
+++ b/src/pages/user/templates/favCollege.ejs
@@ -1,25 +1,25 @@
 <% if (favorites.length == 0) { %>
 	<li class="no_transList"><i class="noListIcon"></i><em class="vm">暂无记录</em></li>
 <% }else{ %>	
-<% for (var i = 0; i < colleges.length; i++) { %>
+<% for (var i = 0; i < favorites.length; i++) { %>
 <li class="clearfix">
 	<div class="fl">
-	<h4 class="name badgeRow"><em class="badgetitle vm"><%= colleges[i].collegeName %></em>
-		<% for (var j = 0; j < colleges[i].feature.length; j++) { %>
-			<% if(colleges[i].feature[j].type == 1) { %>
-				<span class="badge green"><%= colleges[i].feature[j].name %></span>
-			<% }else if(colleges[i].feature[j].type == 2){ %>
-				<span class="badge red"><%= colleges[i].feature[j].name %></span>
+	<h4 class="name badgeRow"><em class="badgetitle vm"><%= favorites[i].college.collegeName %></em>
+		<% for (var j = 0; j < favorites[i].college.feature.length; j++) { %>
+			<% if(favorites[i].college.feature[j].type == 1) { %>
+				<span class="badge green"><%= favorites[i].college.feature[j].name %></span>
+			<% }else if(favorites[i].college.feature[j].type == 2){ %>
+				<span class="badge red"><%= favorites[i].college.feature[j].name %></span>
 			<% }else{ %>
-				<span class="badge"><%= colleges[i].feature[j].name %></span>
+				<span class="badge"><%= favorites[i].college.feature[j].name %></span>
 			<% } %>
 		<% } %>
 	</h4>
 	<div class="detail">
-		<span class="label">院校属地：</span><span class="field"><%= colleges[i].city.name %></span>
-		<span class="label">院校分类：</span><span class="field"><%= colleges[i].collegeType.name %></span>
-		<span class="label">院校性质：</span><span class="field"><%= colleges[i].ownerType.name %></span>
-		<span class="label">院校层次：</span><span class="field"><%= colleges[i].level.name %></span>
+		<span class="label">院校属地：</span><span class="field"><%= favorites[i].college.city.name %></span>
+		<span class="label">院校分类：</span><span class="field"><%= favorites[i].college.collegeType.name %></span>
+		<span class="label">院校性质：</span><span class="field"><%= favorites[i].college.ownerType.name %></span>
+		<span class="label">院校层次：</span><span class="field"><%= favorites[i].college.level.name %></span>
 	</div>
 	</div>
 	<div class="fr">
