--- a/src/pages/user/templates/favCollege.ejs
+++ b/src/pages/user/templates/favCollege.ejs
@@ -23,7 +23,7 @@
 	</div>
 	</div>
 	<div class="fr">
-		<a href="#" class="btn btn-primary btn-mid">查看详情</a>
+		<a href="/library/college/<%= favorites[i].college.collegeId %>" class="btn btn-primary btn-mid" target="_blank">查看详情</a>
 	</div>
 </li>
 <% }} %>
