--- a/src/pages/user/templates/qaList.ejs
+++ b/src/pages/user/templates/qaList.ejs
@@ -3,7 +3,7 @@
 <% }else{ %>
 <% for (var i = 0; i < questions.length; i++) { %>
 <li class="q-school">
-			<h3 class="blue">浙江大学</h3>
+			<h3 class="blue"><%= questions[i].college.collegeName %></h3>
 			<div class="s-faq">
 				<div class="q media">
 					<span class="fl blue">问：</span>
