--- a/src/pages/expertOrder/index.less
+++ b/src/pages/expertOrder/index.less
@@ -33,4 +33,11 @@
 
 .row label + .col2{margin-left: 100px;}
 
-.bookCnt .label_radio{width: 140px;}
+.bookCnt .bookRow{margin-bottom: 10px;}
+.bookCnt .label_radio{display: block;margin-bottom: 12px;width: auto;margin-right: 0;line-height: 1.5;text-align: left;}
+.bookCnt .label_radio.last{margin-bottom: 0;}
+.bookCnt .label_radio{
+	padding:10px;
+	.c1{margin-right: 6px;vertical-align: middle;display: inline-block;}
+	.appointmentDesc{display: inline-block;vertical-align: middle;max-width: 90%;}
+}
