--- a/src/pages/expertOrder/templates/apply.ejs
+++ b/src/pages/expertOrder/templates/apply.ejs
@@ -31,8 +31,6 @@
   <div class="col2 selectWrap rel">
     <div class="fieldWrap">
       <select class="form-control" name="city">
-          <option value="1">浙江</option>
-          <option value="2">上海</option>
         </select>
     </div>
   </div>
@@ -70,22 +68,22 @@
   </div>
 </div>
 
-<div class="row clearfix">
+<div class="row clearfix bookRow">
   <label for="bookType" class="control-label column col1 fl">
     <i class="icon-location icon-book"></i>
     <em class="vm">预约内容：</em></label>
   <div class="col2 inputWrap rel">
     <div class="fieldWrap bookCnt">
-      <label for="bookType_1"  class="label_radio inline">
-      <em class="icon-radio"></em>
+      <label for="bookType_1"  class="label_radio inline clearfix">
+      <em class="icon-radio c1"></em>
       <input type="radio" class="input form-control" id="bookType_1" name="bookType" checked value="1" required>
-      <em class="vm">专家线上服务</em>
+      <em class="vm appointmentDesc">专家线上服务</em>
       </label>
 
-      <label for="bookType_0" class="label_radio inline">
-      <em class="icon-radio"></em>
+      <label for="bookType_0" class="label_radio inline last clearfix">
+      <em class="icon-radio c1"></em>
       <input type="radio" value="0" class="input form-control" id="bookType_0" name="bookType" required>
-      <em class="vm">专家面对面服务</em>
+      <em class="vm appointmentDesc">专家面对面服务</em>
       </label>
     </div>
   </div>
