--- a/src/pages/expertOrder/index.less
+++ b/src/pages/expertOrder/index.less
@@ -31,6 +31,9 @@
 .icon-newuser{background-position: -100px 0;}
 .icon-newphone{background-position: -120px 0;}
 
+.icon-txt{background-position: -220px 0;}
+.icon-time{background-position: -200px 0;}
+
 .row label + .col2{margin-left: 100px;}
 
 .bookCnt .bookRow{margin-bottom: 10px;}
