--- a/src/pages/expertOrder/templates/apply.ejs
+++ b/src/pages/expertOrder/templates/apply.ejs
@@ -70,7 +70,7 @@
 
 <div class="row clearfix bookRow">
   <label for="bookType" class="control-label column col1 fl">
-    <i class="icon-location icon-book"></i>
+    <i class="icon-location icon-txt"></i>
     <em class="vm">预约内容：</em></label>
   <div class="col2 inputWrap rel">
     <div class="fieldWrap bookCnt">
@@ -91,7 +91,7 @@
 
 <div class="row clearfix">
   <label for="booktime" class="control-label column col1 fl">
-    <i class="icon-location icon-phone"></i>
+    <i class="icon-location icon-time"></i>
     <em class="vm">预约时间：</em></label>
   <div class="col2 inputWrap rel">
     <div class="fieldWrap">
