--- a/src/pages/score/index.less
+++ b/src/pages/score/index.less
@@ -4,7 +4,7 @@
 
 .formWrap{background-color: #fff;padding:32px 28px;margin-bottom: 30px;}
 
-.recommend{min-height: 74px;}
+.recommend{min-height: 74px;margin-top: 32px;}
 .recommend .btnRow{margin-top: 20px;}
 
 .tableWrap{
@@ -35,4 +35,16 @@ select.editor{
 	border-color: #ec5524;
 }
 
+.table.text-center th{vertical-align: middle;}
+
 #charts{width:900px;height: 450px;border:1px solid #e2e2e2;padding:32px;margin:0 auto;}
+
+*{box-sizing: content-box;}
+.header * ,.footer *,.m-aside *,.tableWrap *{box-sizing: border-box;}
+
+[tabindex] {
+   outline: none !important;
+}
+
+
+
