--- a/src/assets/templates/applyInfo.ejs
+++ b/src/assets/templates/applyInfo.ejs
@@ -98,7 +98,7 @@
   </div>
 </div>
 
-<% if(majorList.length) { %>
+<% if(majorList && majorList.length) { %>
 <div class="row clearfix">
   <label for="courseType" class="control-label column col1 fl">
     <i class="icon-location icon-hat"></i>
@@ -117,7 +117,7 @@
 </div>
 <% } %>
 
-<% if(c.length) { %>
+<% if(c && c.length) { %>
 <div class="row clearfix">
   <label for="courseType" class="control-label column col1 fl">
     <i class="icon-location icon-street"></i>
