--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -131,3 +131,15 @@
 }
 }
 
+.enterWrap{
+	width:323px;height: 302px;background: url(./img/enter.png) no-repeat;left:50%;margin-left: 177px;top:29px;z-index: 9;
+	.enterLinks{font:0/0 a;overflow: hidden;position: absolute;background-color: transparent;}
+	.book{width: 156px;height: 96px;left:5px;top:5px;}
+	.score{width: 156px;height: 96px;right:5px;top:5px;}
+	.evaluate{width: 156px;height: 96px;left:5px;top:103px;}
+	.aboard{width: 156px;height: 98px;right:5px;top:103px;}
+	.test{width: 102px;height: 96px;left:5px;top:200px;}
+	.qa{width: 102px;height: 96px;left:109px;top:200px;}
+	.expert{width: 102px;height: 96px;right:5px;top:200px;}
+}
+
