--- a/src/pages/majorExam1/templates/tmpl.ejs
+++ b/src/pages/majorExam1/templates/tmpl.ejs
@@ -18,7 +18,7 @@
         <em class="vm">授权码：</em></label>
       <div class="col2 inputWrap rel">
         <div class="fieldWrap">
-          <input type="text" class="input form-control" id="code" name="code" maxlength="6" required placeholder="请输入授权码">
+          <input type="text" class="input form-control" id="code" name="code" required placeholder="请输入授权码">
         </div>
       </div>
       <div class="errInfo">
