--- a/src/pages/info/templates/infoList.ejs
+++ b/src/pages/info/templates/infoList.ejs
@@ -8,7 +8,7 @@
 			<img src="<%= news[i].newsIconUrl %>">
 		</span>
 		<div class="media-body">
-				<a class="detailTitle ellipsis" href="<%= news[i].newsUrl %>" target="_blank">
+				<a class="detailTitle" href="<%= news[i].newsUrl %>" target="_blank">
 					<%= news[i].newsName %>
 				</a>
 				<div class="clearfix detailSub g6">
