--- a/src/pages/score/index.less
+++ b/src/pages/score/index.less
@@ -29,7 +29,7 @@ select.editor{
 }
 
 .editor{
-	border:1px solid #ddd;
+	border:1px solid #61c0e2;
 }
 .editor.error{
 	border-color: #ec5524;
@@ -45,6 +45,8 @@ select.editor{
 [tabindex] {
    outline: none !important;
 }
+
+.table-bordered tbody tr td.onEditor{border-top: none;}
 
 
 
