--- a/src/pages/user/templates/history.ejs
+++ b/src/pages/user/templates/history.ejs
@@ -5,7 +5,7 @@
 	<div class="well clearfix" type ="1">
 		<div class="media fl">
 			<div class="span fl">
-				<span class="btn btn-primary">高考方案定制</span>
+				<span class="btn btn-primary">高考志愿定制</span>
 			</div>
 			<div class="media-body g3 well_body">
 				<p>
