--- a/src/pages/score/templates/exam.ejs
+++ b/src/pages/score/templates/exam.ejs
@@ -12,7 +12,7 @@
 		</div>
 	</th>
 	<% } %>
-	<td editable examid="<%= scores[i].exam.examId %>" select subjectid="<%= scores[i].subjects[k].subjectId %>" >
+	<td examid="<%= scores[i].exam.examId %>" select subjectid="<%= scores[i].subjects[k].subjectId %>" >
 		<%= scores[i].subjects[k].subjectName %>
 	</td>
 	<td editable examid="<%= scores[i].exam.examId %>" pattern="^[0-9]{1,3}$" ><%= scores[i].subjects[k].score %></td>
