--- a/src/assets/templates/applyInfo.ejs
+++ b/src/assets/templates/applyInfo.ejs
@@ -82,7 +82,7 @@
     <em class="vm">高考分数：</em></label>
   <div class="col2 inputWrap rel">
     <div class="fieldWrap lh34">
-      <span><%= score %></span>
+      <span><%= score %>分</span>
     </div>
   </div>
 </div>
