--- a/src/pages/bookStep3/templates/majorList.ejs
+++ b/src/pages/bookStep3/templates/majorList.ejs
@@ -3,9 +3,15 @@
 	<p class="g6 mb12">本科大类：</p>
 
 	<% for (var i = 0; i < subs[0].subs.length; i++) { %>
+		<% var checkedStatus;
+		 if(subs[0].subs[i].status == 1) {
+			checkedStatus = "checked";
+		 }else{
+			checkedStatus = "";
+		 } %>
 	<label class="label_check">
 		<em class="icon-eye" data-supType=<%= subs[0].id %> data-majorId=<%= subs[0].subs[i].id %> data-name="<%= subs[0].subs[i].name %>" ></em>
-		<input type="checkbox" class="input form-control" id="majorType<%= subs[0].id %>_<%= subs[0].subs[i].id %>" name="majorType" required>
+		<input type="checkbox" class="input form-control" id="majorType<%= subs[0].id %>_<%= subs[0].subs[i].id %>" name="majorType" <%= checkedStatus %> required>
 		<em class="vm"><%= subs[0].subs[i].name %></em>
 		<em class="icon-yes">
 			<i></i>
@@ -14,14 +20,19 @@
 	<% } %>
 </div>
 <% }else if(batch == 3){ %>
-
 <div class="row">
 	<p class="g6 mb12">专科大类：</p>
 
 	<% for (var m = 0; m < subs[1].subs.length; m++) { %>
+		<% var checkedStatus; 
+		 if(subs[1].subs[m].status == 1) { 
+			checkedStatus = "checked"; 
+		 }else{ 
+			checkedStatus = ""; 
+		 } %>
 	<label class="label_check">
 		<em class="icon-eye" data-supType=<%= subs[1].id %> data-majorId=<%= subs[1].subs[m].id %> data-name="<%= subs[1].subs[m].name %>" ></em>
-		<input type="checkbox" class="input form-control" id="majorType<%= subs[1].id %>_<%= subs[1].subs[m].id %>" name="majorType" required>
+		<input type="checkbox" class="input form-control" id="majorType<%= subs[1].id %>_<%= subs[1].subs[m].id %>" name="majorType" <%= checkedStatus %> required>
 		<em class="vm"><%= subs[1].subs[m].name %></em>
 		<em class="icon-yes">
 			<i></i>
