--- a/src/assets/less/mod/form.less
+++ b/src/assets/less/mod/form.less
@@ -8,7 +8,7 @@ input,select,textarea {outline: none;}
 .input::-ms-clear,input::-ms-clear { display: none; }
 .input:valid + .iptTxtClr { display: inline; }
 textarea.form-control {height: auto;box-shadow: inset 0 1px 1px rgba(0,0,0,.075);border-radius: 4px;}
-.input.error, input.error, .error .input,.error input, .error textarea{border-color: #ec5524;}
+.input.error, input.error, .error .input,.error input, .error textarea, .error select{border-color: #ec5524;}
 .input:focus, input.focus {border-color: #51b4ff;}
 .input[readonly]:focus,.input.disabled:focus{border-color: #ccc;}
 .selectRow,.inputRow{border-bottom:1px solid #D0D0D0;line-height:54px;background-color:#fff;overflow:hidden;}
