--- a/src/assets/less/mod/reset.less
+++ b/src/assets/less/mod/reset.less
@@ -1,6 +1,6 @@
 html,body,input,textarea,button,select {font: 12px/1.42857143 '微软雅黑',STHeiti,arial,sans-serif;} 
 html,body,header,footer,nav,article,figure,section,aside,code,div,p,ul,ol,li,dl,dd,dt,h1,h2,h3,h4,h5,h6,a,span,strong,em,small,form,label,input,textarea,blockquote{margin: 0;padding: 0}
-ul,ol,li{list-style: none}
+ul,ol,li{list-style: none;}
 img {border: 0;vertical-align: middle;}
 i{font-style:normal;}
 label,input {vertical-align: middle}
