--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -2,7 +2,7 @@
 @color-orange: #f4b64f;
 
 .orange{color: @color-orange;}
-
+ul li {list-style-type:none;}
 .mainContainer{margin-bottom: 36px;}
 .m-sideNav{background-color: #ddd;padding-top: 20px;}
 .avatarWrap .imgWrap{display:inline-block;border:1px solid #b7b7b7;}
