--- a/src/pages/collegeDetail/templates/major.ejs
+++ b/src/pages/collegeDetail/templates/major.ejs
@@ -3,7 +3,7 @@
 <% }else{ %>	
 <% for (var i = 0; i < majors.length; i++) { %>
 <li class="majorList clearfix">
-	<a class="fr taoIcon next" href="#" target="_blank"></a>
+	<a class="fr taoIcon next" href="/library/major/<%= majors[i].majorId %>" target="_blank"></a>
 	<div class="majorDetail">
 		<h5 class="name badgeRow">
 			<em class="badgetitle vm"><%= majors[i].majorName %></em>
