--- a/src/pages/aboard/index.less
+++ b/src/pages/aboard/index.less
@@ -23,3 +23,15 @@
 	.control-label em{margin-left: 10px;}
 }
 
+
+.aboard .beautify-select .options{
+	border-bottom: 1px solid #e7e7e7;
+	li {
+	    color: #333;
+	    line-height: 24px;
+	    font-size: 14px;
+	    padding: 0 0 0 10px;
+	    height: 24px;
+	    &.current,&:hover{background-color: @color-blue;color:#fff;}
+	}
+}
