--- a/src/pages/aboard/templates/exam.ejs
+++ b/src/pages/aboard/templates/exam.ejs
@@ -1,3 +1,3 @@
 <% for (var i = 0; i < exam.length; i++) { %>
-<li code="<%= exam[i].id %>" name="<%= exam[i].name %>" ><%= exam[i].name %></option>
+<li code="<%= exam[i].code %>" name="<%= exam[i].name %>" ><%= exam[i].name %></option>
 <% } %>
