科目数据库

--- a/src/pages/subject/index.less
+++ b/src/pages/subject/index.less
@@ -21,6 +21,14 @@
 	.btn-default > em{display: inline-block;margin-right: 3px;}
 }
 
+.m-nav .crumb{
+	.tagsWrap{padding-left: 72px;padding-right: 66px;display: block;}
+	.tags{display: inline-block;margin-bottom: 10px;
+		&:last-child{margin-bottom: 0;}
+	}
+} 
+
+
 .badgeRow{margin-bottom: 10px;}
 .badgeRow .badgetitle{display: inline-block;color:#333;font-size:18px;margin-right: 8px;}
 
@@ -32,3 +40,19 @@
 }
 .schoolList .btn{margin-top: 6px;}
 .schoolListWrap{border-top:1px solid #e2e2e2;margin-top: 24px;}
+.favMajorBtn{min-width: 84px;}
+
+.favMajorModal{
+	.majorListWrap{padding-top: 16px;padding-left: 12px;}
+	.row{line-height: 30px;margin-bottom: 16px;}
+	.col1{display: inline-block;width: 100px;font-size: 15px;
+		a{color: #444;}
+	}
+	.col2{display: block;width: auto;
+		.btn{font-size: 13px;padding-top: 0;padding-bottom: 0;line-height: 28px;margin-right: 10px;}
+	}
+	.pagination{padding-top: 10px;}
+}
+
+
+
