--- a/src/pages/collegeFaq/index.less
+++ b/src/pages/collegeFaq/index.less
@@ -13,8 +13,9 @@
 .formWrap{background-color: #fff;padding:32px 24px 36px;margin-bottom: 30px;}
 
 .list-group-item{
-	color:#555;font-size: 15px;line-height: 23px;
+	color:#555;font-size: 15px;line-height: 23px;cursor: default;
 	.body{display: block;margin-left: 232px;}
+	&.cp{cursor: pointer;}
 }
 
 .icon-right{width:13px;height: 23px;background-position: -43px 0;}
