--- a/src/assets/less/mod/modalBox.less
+++ b/src/assets/less/mod/modalBox.less
@@ -49,6 +49,7 @@
 .taoModal .inputRows{background-color: #fff;border-radius:4px;box-shadow: 0 1px #ccc;border:1px solid #e2e2e2;border-bottom: none;}
 .subLinksRow{margin-right: -32px;margin-top: 20px;}
 .subLinks{text-decoration: underline;margin-right: 32px;color:#333;}
+.subLinks.disabled{background: none;}
 
 .openLogin {margin-top: 40px}
 .line {height: 1px;border-top: 1px solid #9a9a9a; text-align: center;}
