--- a/src/pages/expertOrder/templates/apply.ejs
+++ b/src/pages/expertOrder/templates/apply.ejs
@@ -95,7 +95,7 @@
     <em class="vm">预约时间：</em></label>
   <div class="col2 inputWrap rel">
     <div class="fieldWrap">
-      <input type="text" class="input form-control" id="booktime" name="booktime" required placeholder="预约时间">
+      <input type="text" class="input form-control" id="booktime" name="booktime" required placeholder="“例如：3月30日 下午2点">
     </div>
   </div>
 </div>
