--- a/src/assets/less/mod/header.less
+++ b/src/assets/less/mod/header.less
@@ -48,7 +48,9 @@
 		}
 	}
 	.caret{border-top-color: #1d718f;border-width: 6px;position: relative;top:-2px;}
-	.options{position: absolute;}
+	.options{position: absolute;
+		li{text-align: center;height: auto;color: #fff;zoom: 1;list-style: none;cursor: pointer;padding-top: 4px;padding-bottom: 4px;}
+	}
 }
 
 .navLists .options,#selectSwitch .options{
